<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gamer App</string>
    <string name="app_logo">App Logo</string>
    
    <!-- Login Screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_now">Don\'t have an account? Register Now</string>
    
    <!-- Sign Up Screen -->
    <string name="full_name">FullName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="terms_privacy">By registering you agree to our Terms &amp; Conditions and Privacy Policy</string>
    
    <!-- Forgot Password Screen -->
    <string name="forgot_password_description">Please enter your registered email to reset your password</string>
    <string name="email_phone">Email/Phone</string>
    <string name="send_sms">Send SMS</string>
    
    <!-- OTP Validation Screen -->
    <string name="otp_title">Enter the code sent to you by\nEmail or Mobile number</string>
    <string name="verify">Verify</string>
    <string name="didnt_receive">Didn\'t receive a verification code?</string>
    <string name="resend_code">Resend code</string>
    
    <!-- Reset Password Screen -->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_description">Please enter your new password and confirm it.</string>
    
    <!-- Error Messages -->
    <string name="error_email">Must not be empty!</string>
    <string name="error_password">Must not be empty!</string>
    <string name="error_fullname">Must be at least 3 characters!</string>
    <string name="error_confirm_password">Must be the same password!</string>
    <string name="error_email_phone">Must not be empty!</string>
    
    <!-- Other -->
    <string name="toggle_password">Toggle Password Visibility</string>
</resources>